Fixed typo on instruction 3 of access form

--- a/registry_app/templates/access.html
+++ b/registry_app/templates/access.html
@@ -75,7 +75,7 @@
           <br>
           <li>Click the item's card to go directly to its online store and purchase with a gift receipt.</li>
           <br>
-          <li>Once purchased, click the the item's "Click here to mark as purchased" button to prevent duplicate gifts.</li>
+          <li>Once purchased, click the item's "Click here to mark as purchased" button to prevent duplicate gifts.</li>
           <br>
           <li>
             We have found many of the items on our registry available for much less money at consignment stores. Try checking a few of the following stores to save $$$$ while reducing our environmental impact.
